# rgb-converter

./: .gitignore  CHANGELOG.rst  README.md  RGB-Converter.spec  create-app.sh  license  main.py  requirements.txt  rgb-converter.icns  setup.cfg  setup.py
rgb-converter/: converter.py  main.py  main_window.py
rgb_converter/: main_window.py
