[metadata]
name = rgb-converter
version = 0.0.2
author = Bodo Schönfeld
author_email = bodo.schönfeld@niftycode.de
url = https://github.com/niftycode/rgb-converter
description = A program to convert hex values to RGB values and vice versa
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
requires_python = >=3.9
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
